--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                     </div>
                     <div class="info-item">
                         <div class="info-label">Contact</div>
-                        <div class="info-value"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0d7b6c63687e7e6c236074646379353c4d6a606c6461236e6260">[email&#160;protected]</a></div>
+                        <div class="info-value">vanessa.myint81@gmail.com</div>
                     </div>
                 </div>
             </div>
@@ -759,7 +759,7 @@
                         <h1>Vanessa Aye Sabai Myint (Vanz)</h1>
                         <div class="cv-contact">
                             P307 / 348 St Kilda Rd, Melbourne VIC 3004<br>
-                            +61 456 458 866 | <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="bec8dfd0dbcdcddf90d3c7d7d0ca868ffed9d3dfd7d290ddd1d3">[email&#160;protected]</a><br>
+                            +61 456 458 866 | vanessa.myint81@gmail.com<br>
                             https://vanessaaye.wixsite.com/van-s-journal
                         </div>
                     </div>
